--- a/Jack_Ung_Water_Usage_Flash_Project13.html
+++ b/Jack_Ung_Water_Usage_Flash_Project13.html
@@ -72,7 +72,7 @@ function handleComplete() {
 }
 </script>
 
-<style>
+<!--<style>
 div#wrapper {
 position:absolute;
 left: 50%;
@@ -87,7 +87,7 @@ body {
 background-color:#48C4F2;
 }
 
-</style>
+</style>-->
 <!-- write your code here -->
 </head>
 <body onload="init();" style="margin:0px;">
